--- a/t1/index.html
+++ b/t1/index.html
@@ -1,77 +1,96 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 	<head>
-		<title>Como Museus e Associações podem arrecadar mais através das ferramentas de recorrência</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="">
+		<meta name="author" content="Cesar Szpak - Celke">
+		<link rel="icon" href="imagens/Logo.jpg">
+		<title>Tini</title>
+		<link href="css/bootstrap.css" rel="stylesheet">
+		<link href="css/carousel.css" rel="stylesheet">
 	</head>
-	<body>
-
-		<!-- Header -->
-			<header id="header">
-				<div class="logo"><a href="#">TINI <span>Blog</span></a></div>
-			</header>
-
-		<!-- Main -->
-			<section id="main">
-				<div class="inner">
-
-				<!-- One -->
-					<section id="one" class="wrapper style1">
-
-						<div class="image fit flush">
-							<img src="images/tt-min.png" alt="" />
-						</div>
-						<header class="special">
-							<h2>Como Museus e Associações podem arrecadar mais através das ferramentas de recorrência</h2>
-						</header>
-						<div class="content">
-							<p>Atualmente, a venda de ingressos pela internet é feita em geral por empresas de bilhetagem, como Ingresso.com, Ingresso Rápido e T4F. A praticidade do serviço, porém, traz uma desvantagem: muitas vezes a necessidade de criar cadastros em diversos portais de venda afastam os clientes além dos dados de público e o relacionamento com o cliente no pós-venda não ficarem com os museus, teatros e casas de show. </p>
-							<p>Imagine um teatro de 30 anos que não faz ideia de quem é o seu público e não sabe como se relacionar com ele. Programas de doações que iniciam bem, mas em sequência passam a apresentar um alto Churn. Essa é realidade dos museus e das galerias de arte.  A Tini nasceu para gerir doações a museus e associações, em nosso portfólio temos cases de instituições que tiveram crescimento superior 400% no seu programa de doação em apenas seis meses.</p>
-							<p> O diferencial do nosso serviço é que tudo acontece dentro do ambiente de sua empresa, pois somos um white label. Quando seu cliente clicar em comprar ou doar, abre-se uma página com a identidade visual de seu negócio  e os dados do comprador serão enviados para o seu banco de dados. Ao contrário de quando o serviço é feito por uma empresa de ingressos comum, a compra será feita fora do seu ambiente virtual, e você perderá o controle de informações importantes como quem está comprando, ou quantas pessoas desistiram e largaram o carrinho.</p>
-						</div>
-					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper style2">
-							
-					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper">
-						<div class="spotlight">
-							<div class="image flush"><img src="images/quemsomos (1).png" alt="" /></div>
-							<div class="inner">
-								<h3>COMO A TINI AJUDA?</h3>
-								<p>Pense em um plano de assinaturas, ajudamos a reduzir os casos de compradores que não aparecem nas apresentações. Com nosso sistema, fornecemos um aplicativo em que acompanhamos se ele irá ou não na apresentação comprada. Se ele não for, oferecemos alternativas como doar o ingresso, ou agendar para outra data. Com isso reduzimos as faltas e as pessoas continuam renovando as assinaturas, baixando o Churn.  Estamos aos poucos mudando a forma como museus e outros equipamentos culturais se relacionam com seu público. Para isso, a estratégia é deixá-los mais parecidos com os e-commerces.</p>
-							</div>
-						</div>							
-					</section>
-
+	<body role="document">
+		<!-- Fixed navbar -->
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" rel="icon" href="imagens/Logo2.jpg"></a>
 				</div>
-			</section>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="container">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li><a href="#">Home</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#contact">Contato</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="#">Ebook's Gratuitos</a></li>
+								<li><a href="#">cadastre-se</a></li>
+								<li><a href="#">Recomende para seus amigos</a></li>
+								<li role="separator" class="divider"></li>
+															</ul>
+						</li>
 					</ul>
+				</div><!--/.nav-collapse -->
+			</div>
+		</nav>
+
+		<!-- Carousel
+		================================================== -->
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			<!-- Indicators -->
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1"></li>
+				<li data-target="#myCarousel" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner" role="listbox">
+				<div class="item active">
+					<img class="first-slide" src="imagens/Como suas ações no Marketing Digital podem ajudar no seu evento.png" alt="First slide">
+					<div class="container">
+						<div class="carousel-caption">
+							<p><a class="btn btn-lg btn-primary" href="https://blogama.firebaseapp.com/subs/card1.html" role="button">Ler Mais</a></p>
+						</div>
+					</div>
 				</div>
-				<div class="copyright">
-					&copy; TINI. All rights reserved. Images <a href="https://www.istockphoto.com/br">istockphoto</a> 				</div>
-			</footer>
+				<div class="item">
+					<img class="second-slide" src="imagens/Cultura de mecenado (Ebook).png" alt="Second slide">
+					<div class="container">
+						<div class="carousel-caption">
+							<p><a class="btn btn-lg btn-primary" href="http://celke.com.br/cursos/1/curso-de-php-mysqli-e-bootstrap" role="button">Ver mais</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					 <img class="third-slide" src="imagens/4 dicas sobre terceiro setor (1).png" alt="Third slide">
+					<div class="container">
+						<div class="carousel-caption">
+							<p><a class="btn btn-lg btn-primary" href="http://celke.com.br/cursos/1/curso-de-php-mysqli-e-bootstrap" role="button">Ver mais</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div><!-- /.carousel -->
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+		<!-- Bootstrap core JavaScript
+		================================================== -->
+		<script src="js/jquery.min.js"></script>		
+		<script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
