--- a/Terceiro Setor/Terceiro Setor.html
+++ b/Terceiro Setor/Terceiro Setor.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Blog Post Tini - 4 Dicas para arrecadar mais recursos no Terceiro Setor  </title>
+  <title>Blog Post Tini - 4 dicas para arrecadar mais no terceiro setor  </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +57,7 @@
       <div class="col-lg-8">
 
         <!-- Title -->
-        <h1 class="mt-4">4 Dicas para arrecadar mais recursos no Terceiro Setor </h1>
+        <h1 class="mt-4">4 dicas para arrecadar mais no terceiro setor </h1>
 
         <!-- Author -->
         <p class="lead">
@@ -80,17 +80,10 @@
         <!-- Post Content -->
         <p class="lead">Marketing/Diversos</p>
 
-          <p>Para uma entidade do Terceiro Setor, ou seja, aquelas organizações que não possuem fins lucrativos, é fundamental que se tenha uma captação de recursos de maneira otimizada, recorrente e o principal, que seja transparente! Para isso, a TINI te ajuda! Somos uma empresa 100% digital e 100% transparente! Elimine intermediários no processo de captação de recursos, esteja mais próximo do público que sempre ajuda sua organização e otimize o contato com seus doadores para construir uma relação de confiança. Conte conosco para que mais ações positivas se espalhem pelo mundo. </p>
-          <p>Abaixo listamos quatro delas, apenas para iniciar um processo onde você possa pensar fora da caixa e buscar opções que tragam bons resultados para sua instituição. Vamos lá!</p>
-          <img class="img-fluid rounded" src="img/4 dicas sobre terceiro setor.png" alt="">
-          <p>O terceiro setor é um termo sociológico de designação para as organizações e entidades que não possuem fins lucrativos. Logicamente a sociedade civil possui outros setores, o primeiro setor, que compreende as instituições do governo e seus poderes, o segundo setor que trata das empresas privadas que visam o lucro como finalidade única e também o setor dos negócios sociais, o setor 2,5, que além do lucro observam o impacto social como centro de suas operações.</p>
-          <p>No Brasil as organizações que compõem este setor são as ONG’s, Associações, Fundações, Clubes Esportivos, Faculdades, Escolas, Entidades Beneficentes, OSCIPS, Igrejas ou instituições de cunho religioso, entre algumas outras possíveis formas.</p>
-          <p>Essas entidades têm por base financeira a arrecadação de doações, sejam elas advindas do governo, de empresas e também de pessoas físicas, nos mais variados formatos, desde valores até a doação de materiais que sejam de uso necessário da instituição. No caso de Associações, como clubes esportivos e caixinhas, as contribuições feitas pelos associados visam vantagens para todos os membros, mas a captação destes recursos para manutenção das atividades costuma ser uma grande dor de cabeça para seus dirigentes. </p>
-          <p>Quando o tema arrecadação é levantado muitas vezes as pessoas acabam chegando a pontos comuns como as práticas de participar em editais e busca de fundos governamentais. Apesar de serem soluções viáveis, as organizações devem buscar alternativas que sejam passíveis de execução com mais facilidade e também sem depender de tanta burocracia ou tempo de espera para liberação de verbas, afinal todos sabem que entidades possuem custos que podem variar de mês para mês e poder arrecadar mais significa solucionar problemas a curto e longo prazo, e a Tini é a plataforma desenvolvida para salvá-lo dessa enrascada.</p>
-          <p> Siga o blog, e fique por dentro!
-            Clique aqui para receber nossa newsletter.
-            </p>
-            
+          <p>A maior parte das entidades do terceiro setor tem por base financeira a arrecadação de doações, sejam elas advindas do governo, de empresas e também de pessoas físicas, nos mais variados formatos, desde valores até a doação de materiais que sejam de uso necessário da instituição. No caso de Associações, como clubes esportivos, as contribuições feitas pelos associados visam vantagens para todos os membros, mas a captação destes recursos para manutenção das atividades costuma ser uma grande dor de cabeça para seus dirigentes.</p>
+          <p>Quando o tema arrecadação é levantado muitas vezes as pessoas acabam chegando a pontos comuns como as práticas de participar em editais e busca de fundos governamentais. Apesar de serem soluções viáveis, as organizações devem buscar alternativas que sejam passíveis de execução com mais facilidade e também sem depender de tanta burocracia ou tempo de espera para liberação de verbas, afinal todos sabem que entidades possuem custos que podem variar de mês para mês e poder arrecadar mais significa solucionar problemas a curto e longo prazo.</p>
+          <P>Para tanto é fundamental que toda entidade tenha uma captação de recursos de maneira otimizada, recorrente e o principal, que seja transparente! Para isso, a TINI te ajuda! Somos uma empresa 100% digital e 100% transparente! Elimine intermediários no processo de captação de recursos, esteja mais próximo do público que sempre ajuda sua organização e otimize o contato com seus doadores para construir uma relação de confiança. Conte conosco para que mais ações positivas se espalhem pelo mundo.</P>
+          <p>Leia nosso eBook e entre em contato conosco para te mostrarmos todas as soluções que temos à sua disposição!</p>
 
         <hr>
 
